# piper-sample

./: README.md  pyproject.toml
.github/: copilot-instructions.md
text-to-speach/: __main__.py  stream_cli.py  stream_memory.py
voice/: __main__.py  main.py  stream.py
